--- a/views/login.ejs
+++ b/views/login.ejs
@@ -57,12 +57,13 @@
         headers: {'Content-Type': 'application/json'}
       });
       const data = await res.json();
+      console.log(data)
       if (data.errors) {
         emailError.textContent = data.errors.email;
         passwordError.textContent = data.errors.password;
       }
       if (data.user) {
-        location.assign('/');
+        // location.assign('/');
       }
     }
     catch (err) {
